# apps/backend/src/routes/kpi.routes.ts
@@ -1,2 +1,0 @@
-export const KPI_BASE_PATH = "kpis";
-
